--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,34 +1,38 @@
-<h1>My Books</h1>
+<section class="center-page">
+  <br>
+  <h1>My Books</h1>
 
-<%= form_for @book, html: {id: 'bookForm'} do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-<% end %>
+    <%= form_for @book, html: {id: 'bookForm'} do |f| %>
+      <%= f.text_field :title, id: 'add-book' %>
+    <% end %>
 
-
-<ul class="books">
-  <% @books.each do |book| %>
-    <li><h2 id="<%=book.id%>" class="x">X</h2><h2 class= "book" id="book_<%=book.id%>"><%= book.title %></h2></li>
-    <div class="book_<%=book.id%> edit">
-      <%= form_for(book, :html => {:id => "#{book.id}"}) do |f| %>
-        <%= f.label :title %>
-        <%= f.text_field :title %>
-        <br>
-        <%= f.label :author %>
-        <%= f.text_field :author %>
-        <br>
-        <%= f.label :genre %>
-        <%= f.text_field :genre %>
-        <br>
-        <%= f.label "Number of Pages" %>
-        <%= f.text_field :num_pages %>
-        <br>
-        <%= f.submit "Save" %>
+  <div id="book-list">
+    <ul class="books">
+      <% @books.each do |book| %>
+      <button type="button" id="<%=book.id%>" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-remove" id="<%=book.id%>" aria-hidden="true"></span>
+      </button>
+      <h3 class= "book" id="book_<%=book.id%>"><%= book.title %></h3></li>
+        <div class="book_<%=book.id%> edit">
+          <%= form_for(book, :html => {:id => "#{book.id}"}) do |f| %>
+            <%= f.label :title %>
+            <%= f.text_field :title %>
+            <br>
+            <%= f.label :author %>
+            <%= f.text_field :author %>
+            <br>
+            <%= f.label :genre %>
+            <%= f.text_field :genre %>
+            <br>
+            <%= f.label "Number of Pages" %>
+            <%= f.text_field :num_pages %>
+            <br>
+          <% end %>
+          <input type="submit" class="save" id="<%=book.id%>" value="Save">
+        </div>
       <% end %>
-    </div>
-  <% end %>
-</ul>
-
-
+    </ul>
+  </div>
+</section>
 
 
