--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -103,9 +103,15 @@ ul {
   text-align: left;
 }
 
-.glyphicon {
+.glyphicon-remove {
   padding-bottom: 15px;
   padding-right: 10px;
+  font-size: 20px;
+}
+
+.glyphicon-ok {
+  padding-bottom: 15px;
+  padding-left: 10px;
   font-size: 20px;
 }
 
